# ops-toolbelt

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE.md  Makefile  NOTICE.md  OWNERS  OWNERS_ALIASES  README.md  REUSE.toml  VERSION  branch.cfg  pyproject.toml  requirements.txt
.ci/: build  build_pipeline_definitions  component_descriptor  iaas_providers  k8s_versions  pipeline_definitions  set_dependency_version  test  verify-bandit  verify-shellcheck
.github/: pull_request_template.md  renovate.json5
.github/workflows/: build.yaml  head-update.yaml  release.yaml  reuse-tool-lint.yaml  (+4 more)
.ocm/: base-component.yaml  branch-info.yaml
.reuse/: dep5
dockerfile-configs/: aliyun-components.yaml  aws-components.yaml  az-components.yaml  azure-components.yaml  common-components.yaml  gardenctl-components.yaml  gcp-components.yaml  iaas-components.yaml  kubectlv1.17-components.yaml  kubectlv1.18-components.yaml  kubectlv1.19-components.yaml  kubectlv1.20-components.yaml  openstack-components.yaml  ops-toolbelt.dockerfile  os-components.yaml
dotfiles/: .bash_aliases  .bash_profile  .bash_prompt  .bashrc  .psqlrc  .tmux.conf  .tmux.statusline  .vimrc  .vimrc-minimal  README.md  crictl.yaml  install_crictl.sh
generator/: generate-dockerfile.py  validate-tools.py
hacks/: find-and-show-in-guide  ghelp  install_auger  install_etcd-benchmark  install_etcdctl  install_k9s  install_pwru  kb  ops-pod  pb  print-etcd-cheatsheet  print-etcd-cheatsheet.sh
install_on_demand/: .auger  .etcdctl  .k9s  .pwru  .shrc  .wireguard
tests/: test_main.py  test_models.py  test_utils.py
(+17 files in other folders)
