[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generator"
version = "0.1.0"
description = "Generator package that produces Gardener ops-toolbelt images"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Dimitar Ivanov", email = "dimitar.ivanov04@sap.com"}
]
license-files = ["LICENSES/*.txt"]
keywords = ["generator", "builder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml",
    "pydantic",
    "pydantic-extra-types[all]",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-subtests",
    "flake8",
    "black",
    "mypy",
    "coverage",
    "isort",
    "pylint",
    "bandit==1.9.3",
    "bandit_sarif_formatter"
]

[project.scripts]
generator = "generator.main:generate_dockerfile"
generator-validate = "generator.main:validate"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Equivalent to old setup.cfg sections
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
check_untyped_defs = true

[tool.flake8]
max-line-length = 100

[pycodestyle]
max_line_length = 100
